# netcdf-rs

./: Cargo.toml  README.md
examples/version1/: .gitignore  Cargo.toml  main.rs
examples/version1/netcdf_files/: small1.nc
examples/version1/src/: main.rs
scripts/: create_files_new_format.py  create_files_old_format.py
src/: lib.rs  netcdf.rs  reader.rs
tests/: small.rs
tests/version1/: small1.nc  small2.nc
